Configurations to deploy

--- a/src/MVCBlog.Website/Web.config
+++ b/src/MVCBlog.Website/Web.config
@@ -102,7 +102,7 @@
     <authentication mode="Forms">
       <forms name=".ASPXAUTH" loginUrl="~/Login" timeout="40000">
         <credentials passwordFormat="SHA1">
-          <user name="admin" password="D033E22AE348AEB5660FC2140AEC35850C4DA997" />
+          <user name="rovianvz" password="04EB156E8470C3E843CA95B974E5D234B816AE9A" />
         </credentials>
       </forms>
     </authentication>
