--- a/src/MVCBlog.Website/Web.Release.config
+++ b/src/MVCBlog.Website/Web.Release.config
@@ -14,6 +14,11 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <connectionStrings>
+    <add name="DatabaseContext" connectionString="Server=cascara.arvixe.com;Database=codingnotes;User Id=rovianvz;
+      Password=c0d1ngn0t35;" providerName="System.Data.SqlClient"
+      xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+  </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
