--- a/src/MVCBlog.Website/MVCBlog.Website.csproj
+++ b/src/MVCBlog.Website/MVCBlog.Website.csproj
@@ -40,6 +40,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <ExcludeFoldersFromDeployment>blogcontent</ExcludeFoldersFromDeployment>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Antlr3.Runtime">
@@ -243,20 +244,26 @@
     <Content Include="App_Data\log.txt" />
     <Content Include="blogcontent\blogimages\71574153-81e0-4b3e-82a2-4411afb2e728.gif" />
     <Content Include="blogcontent\blogimages\84384293-13ae-404a-9556-5d95d5fd83bf.gif" />
+    <Content Include="Content\bootstrap-responsive.min.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\custom.css" />
+    <Content Include="Content\font-awesome-ie7.css" />
+    <Content Include="Content\font-awesome.css" />
     <Content Include="Content\jquery.autocomplete.css" />
     <Content Include="Content\lightbox.css" />
     <Content Include="Content\shCoreDefault.css" />
+    <Content Include="Content\styles.css" />
     <Content Include="favicon.ico" />
+    <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\bg-patterns\8.png" />
+    <Content Include="images\CN-Large.png" />
     <Content Include="Mvc.sitemap" />
-    <Content Include="blogcontent\blogfiles\7add611e-f156-499e-a0a2-272dad2b8e76.zip" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
@@ -274,6 +281,10 @@
     <Content Include="Views\Shared\DisplayTemplates\MetaRobotsHelperModel.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\MenuHelperModel.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\CanonicalHelperModel.cshtml" />
+    <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="fonts\fontawesome-webfont.ttf" />
+    <Content Include="fonts\fontawesome-webfont.woff" />
+    <Content Include="fonts\fontawesome-webfont_2d2816fe.eot" />
     <None Include="MvcSiteMapSchema.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -544,7 +555,6 @@
     <Content Include="Views\Blog\_MetaInformationControl.cshtml" />
     <Content Include="Views\Blog\_PagingControl.cshtml" />
     <Content Include="Views\Blog\_PingbacksControl.cshtml" />
-    <Content Include="Views\Imprint\Index.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\Login\Logout.cshtml" />
     <Content Include="gx\avatar.png" />
@@ -561,7 +571,9 @@
     <Content Include="gx\lightbox\prevlabel.gif" />
     <Content Include="gx\rss.png" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -596,10 +608,11 @@
       <Generator>GlobalResourceProxyGenerator</Generator>
       <LastGenOutput>SiteMapLocalizations.designer.cs</LastGenOutput>
     </Content>
-    <EmbeddedResource Include="Properties\Common.de.resx" />
     <EmbeddedResource Include="Properties\Common.resx" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="blogcontent\blogfiles\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
