--- a/src/MVCBlog.Website/Web.config
+++ b/src/MVCBlog.Website/Web.config
@@ -102,7 +102,7 @@
     <authentication mode="Forms">
       <forms name=".ASPXAUTH" loginUrl="~/Login" timeout="40000">
         <credentials passwordFormat="SHA1">
-          <user name="rovianvz" password="04EB156E8470C3E843CA95B974E5D234B816AE9A" />
+          <user name="codingnotes" password="45F493442A2D3C75367D37E1B810914DA93BF497" />
         </credentials>
       </forms>
     </authentication>
