--- a/src/MVCBlog.Website/MVCBlog.Website.csproj
+++ b/src/MVCBlog.Website/MVCBlog.Website.csproj
@@ -205,6 +205,8 @@
     <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\ImprintController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Controllers\MuriloController.cs" />
+    <Compile Include="Controllers\RovianController.cs" />
     <Compile Include="ErrorController.generated.cs">
       <DependentUpon>T4MVC.tt</DependentUpon>
     </Compile>
@@ -256,23 +258,58 @@
     <Content Include="Content\lightbox.css" />
     <Content Include="Content\shCoreDefault.css" />
     <Content Include="Content\styles.css" />
+    <Content Include="css\animate.css" />
+    <Content Include="css\elements.css" />
+    <Content Include="css\prettyPhoto.css" />
+    <Content Include="css\stylesheet.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\avatar.jpg" />
     <Content Include="images\bg-patterns\8.png" />
+    <Content Include="images\Blog-img.jpg" />
+    <Content Include="images\clip.png" />
     <Content Include="images\CN-Large.png" />
+    <Content Include="images\head-image.jpg" />
+    <Content Include="images\loader.gif" />
+    <Content Include="images\noise.png" />
+    <Content Include="images\page-loader.GIF" />
+    <Content Include="images\rovian.png" />
+    <Content Include="images\shadow.png" />
+    <Content Include="images\thumb01.jpg" />
+    <Content Include="images\thumb02.jpg" />
+    <Content Include="images\thumb03.jpg" />
+    <Content Include="images\thumb04.jpg" />
+    <Content Include="js\css_browser_selector.js" />
+    <Content Include="js\jquery-1.11.1.min.js" />
+    <Content Include="js\jquery-migrate-1.2.1.min.js" />
+    <Content Include="js\jquery.address-1.5.min.js" />
+    <Content Include="js\jquery.circliful.min.js" />
+    <Content Include="js\jquery.easing-1.3.js" />
+    <Content Include="js\jquery.isotope.min.js" />
+    <Content Include="js\jquery.prettyPhoto.js" />
+    <Content Include="js\jquery.validate.js" />
+    <Content Include="js\script.js" />
+    <Content Include="js\wow.min.js" />
     <Content Include="Mvc.sitemap" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
-    <Content Include="Scripts\respond.js" />
-    <Content Include="Scripts\respond.matchmedia.addListener.js" />
-    <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
-    <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\css_browser_selector.js" />
+    <Content Include="Scripts\jquery-1.11.1.min.js" />
+    <Content Include="Scripts\jquery-migrate-1.2.1.min.js" />
+    <Content Include="Scripts\jquery.address-1.5.min.js" />
+    <Content Include="Scripts\jquery.circliful.min.js" />
+    <Content Include="Scripts\jquery.easing-1.3.js" />
+    <Content Include="Scripts\jquery.isotope.min.js" />
+    <Content Include="Scripts\jquery.prettyPhoto.js" />
+    <Content Include="Scripts\jquery.validate.js" />
+    <Content Include="Scripts\script.js" />
+    <Content Include="Scripts\wow.min.js" />
     <Content Include="Views\Shared\DisplayTemplates\SiteMapTitleHelperModel.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\SiteMapPathHelperModel.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\SiteMapNodeModelList.cshtml" />
@@ -285,15 +322,21 @@
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont_2d2816fe.eot" />
+    <Content Include="css\elements.less" />
+    <Content Include="css\stylesheet.less" />
+    <Content Include="js\jquery-1.11.1.min.map" />
     <None Include="MvcSiteMapSchema.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Properties\PublishProfiles\CodingNotes.pubxml" />
+    <Content Include="Scripts\jquery-1.11.1.min.map" />
     <None Include="T4MVC.tt.hooks.t4" />
     <None Include="T4MVC.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>T4MVC.cs</LastGenOutput>
     </None>
+    <Content Include="Views\Rovian\Index.cshtml" />
+    <Content Include="Views\Murilo\Index.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
@@ -310,26 +353,7 @@
     <None Include="_bin_deployableAssemblies\amd64\sqlceca40.dll" />
     <None Include="_bin_deployableAssemblies\amd64\Microsoft.VC90.CRT\README_ENU.txt" />
     <None Include="_bin_deployableAssemblies\amd64\Microsoft.VC90.CRT\msvcr90.dll" />
-    <None Include="Scripts\jquery-2.1.1.intellisense.js" />
-    <Content Include="Scripts\bootstrap.js" />
-    <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Scripts\jquery-2.1.1.js" />
-    <Content Include="Scripts\jquery-2.1.1.min.js" />
-    <Content Include="Scripts\jquery-2.1.1.min.map" />
     <None Include="T4MVC.tt.settings.xml" />
-    <Content Include="Scripts\custom.js" />
-    <Content Include="Scripts\customEditBlogEntry.js" />
-    <Content Include="Scripts\feedstatisticschart.js" />
-    <Content Include="Scripts\jquery.autocomplete.pack.js" />
-    <Content Include="Scripts\jquery.lightbox.js" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
-    <Content Include="Scripts\jquery.validate.js" />
-    <Content Include="Scripts\jquery.validate.min.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.js" />
-    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\popup.js" />
-    <Content Include="Scripts\raphael-min.js" />
-    <Content Include="Scripts\raphael.js" />
     <Content Include="Scripts\SyntaxHighlighter\shAutoloader.js" />
     <Content Include="Scripts\SyntaxHighlighter\shBrushAppleScript.js" />
     <Content Include="Scripts\SyntaxHighlighter\shBrushAS3.js" />
@@ -612,6 +636,13 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="blogcontent\blogfiles\" />
+    <Folder Include="css\bootstrap\" />
+    <Folder Include="css\font-awesome\" />
+    <Folder Include="css\images\" />
+    <Folder Include="css\less\" />
+    <Folder Include="images\blog\" />
+    <Folder Include="images\portfolio\" />
+    <Folder Include="images\prettyPhoto\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
