--- a/src/MVCBlog.Website/MVCBlog.Website.csproj
+++ b/src/MVCBlog.Website/MVCBlog.Website.csproj
@@ -269,7 +269,7 @@
     <Content Include="css\elements.css" />
     <Content Include="css\font-awesome\css\font-awesome.css" />
     <Content Include="css\font-awesome\css\font-awesome.min.css" />
-    <Content Include="css\font-awesome\font\fontawesome-webfont.svg" />
+    <Content Include="css\font-awesome\fonts\fontawesome-webfont.svg" />
     <Content Include="css\prettyPhoto.css" />
     <Content Include="css\stylesheet.css" />
     <Content Include="favicon.ico" />
@@ -335,10 +335,10 @@
     <Content Include="fonts\fontawesome-webfont_2d2816fe.eot" />
     <Content Include="css\elements.less" />
     <Content Include="css\stylesheet.less" />
-    <Content Include="css\font-awesome\font\fontawesome-webfont.eot" />
-    <Content Include="css\font-awesome\font\fontawesome-webfont.ttf" />
-    <Content Include="css\font-awesome\font\fontawesome-webfont.woff" />
-    <Content Include="css\font-awesome\font\FontAwesome.otf" />
+    <Content Include="css\font-awesome\fonts\fontawesome-webfont.eot" />
+    <Content Include="css\font-awesome\fonts\fontawesome-webfont.ttf" />
+    <Content Include="css\font-awesome\fonts\fontawesome-webfont.woff" />
+    <Content Include="css\font-awesome\fonts\FontAwesome.otf" />
     <Content Include="css\bootstrap\css\bootstrap-theme.css.map" />
     <Content Include="css\bootstrap\css\bootstrap.css.map" />
     <Content Include="css\bootstrap\fonts\glyphicons-halflings-regular.eot" />
@@ -650,6 +650,7 @@
     <Content Include="App_GlobalResources\SiteMapLocalizations.resx">
       <Generator>GlobalResourceProxyGenerator</Generator>
       <LastGenOutput>SiteMapLocalizations.designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
     </Content>
     <EmbeddedResource Include="Properties\Common.resx" />
   </ItemGroup>
