--- a/src/MVCBlog.Website/MVCBlog.Website.csproj
+++ b/src/MVCBlog.Website/MVCBlog.Website.csproj
@@ -284,6 +284,7 @@
     <Content Include="images\CN-Large.png" />
     <Content Include="images\head-image.jpg" />
     <Content Include="images\loader.gif" />
+    <Content Include="images\logo.png" />
     <Content Include="images\noise.png" />
     <Content Include="images\page-loader.GIF" />
     <Content Include="images\rovian.png" />
@@ -335,15 +336,15 @@
     <Content Include="fonts\fontawesome-webfont_2d2816fe.eot" />
     <Content Include="css\elements.less" />
     <Content Include="css\stylesheet.less" />
-    <Content Include="css\font-awesome\font\fontawesome-webfont.eot" />
-    <Content Include="css\font-awesome\font\fontawesome-webfont.ttf" />
-    <Content Include="css\font-awesome\font\fontawesome-webfont.woff" />
-    <Content Include="css\font-awesome\font\FontAwesome.otf" />
     <Content Include="css\bootstrap\css\bootstrap-theme.css.map" />
     <Content Include="css\bootstrap\css\bootstrap.css.map" />
     <Content Include="css\bootstrap\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="css\bootstrap\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="css\bootstrap\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="css\font-awesome\font\fontawesome-webfont.eot" />
+    <Content Include="css\font-awesome\font\fontawesome-webfont.ttf" />
+    <Content Include="css\font-awesome\font\fontawesome-webfont.woff" />
+    <Content Include="css\font-awesome\font\FontAwesome.otf" />
     <None Include="MvcSiteMapSchema.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -655,6 +656,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="blogcontent\blogfiles\" />
+    <Folder Include="css\font-awesome\fonts\" />
     <Folder Include="css\images\" />
     <Folder Include="css\less\" />
     <Folder Include="images\blog\" />
@@ -697,7 +699,8 @@
     <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
   </Target>
   <PropertyGroup>
-    <PreBuildEvent>xcopy $(SolutionDir)packages\Microsoft.SqlServer.Compact.4.0.8876.1\NativeBinaries $(ProjectDir)_bin_deployableAssemblies /E /Y</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
