--- a/src/MVCBlog.Website/MVCBlog.Website.csproj
+++ b/src/MVCBlog.Website/MVCBlog.Website.csproj
@@ -267,13 +267,9 @@
     <Content Include="css\bootstrap\js\bootstrap.js" />
     <Content Include="css\bootstrap\js\bootstrap.min.js" />
     <Content Include="css\elements.css" />
-    <Content Include="css\font-awesome\css\font-awesome.css" />
-    <Content Include="css\font-awesome\css\font-awesome.min.css" />
-    <Content Include="css\font-awesome\fonts\fontawesome-webfont.svg" />
     <Content Include="css\prettyPhoto.css" />
     <Content Include="css\stylesheet.css" />
     <Content Include="favicon.ico" />
-    <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -284,6 +280,7 @@
     <Content Include="images\CN-Large.png" />
     <Content Include="images\head-image.jpg" />
     <Content Include="images\loader.gif" />
+    <Content Include="images\murilo.jpg" />
     <Content Include="images\noise.png" />
     <Content Include="images\page-loader.GIF" />
     <Content Include="images\rovian.png" />
@@ -329,16 +326,8 @@
     <Content Include="Views\Shared\DisplayTemplates\MetaRobotsHelperModel.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\MenuHelperModel.cshtml" />
     <Content Include="Views\Shared\DisplayTemplates\CanonicalHelperModel.cshtml" />
-    <Content Include="fonts\fontawesome-webfont.eot" />
-    <Content Include="fonts\fontawesome-webfont.ttf" />
-    <Content Include="fonts\fontawesome-webfont.woff" />
-    <Content Include="fonts\fontawesome-webfont_2d2816fe.eot" />
     <Content Include="css\elements.less" />
     <Content Include="css\stylesheet.less" />
-    <Content Include="css\font-awesome\fonts\fontawesome-webfont.eot" />
-    <Content Include="css\font-awesome\fonts\fontawesome-webfont.ttf" />
-    <Content Include="css\font-awesome\fonts\fontawesome-webfont.woff" />
-    <Content Include="css\font-awesome\fonts\FontAwesome.otf" />
     <Content Include="css\bootstrap\css\bootstrap-theme.css.map" />
     <Content Include="css\bootstrap\css\bootstrap.css.map" />
     <Content Include="css\bootstrap\fonts\glyphicons-halflings-regular.eot" />
