--- a/src/MVCBlog.Website/MVCBlog.Website.csproj
+++ b/src/MVCBlog.Website/MVCBlog.Website.csproj
@@ -346,6 +346,7 @@
     </None>
     <Content Include="Views\Rovian\Index.cshtml" />
     <Content Include="Views\Murilo\Index.cshtml" />
+    <Content Include="Views\Shared\_GoogleAnalytics.cshtml" />
     <None Include="_bin_deployableAssemblies\x86\sqlcese40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceqp40.dll" />
     <None Include="_bin_deployableAssemblies\x86\sqlceme40.dll" />
